minor text change

--- a/ideas/posts/2024/02/19/what-is-data-science.qmd
+++ b/ideas/posts/2024/02/19/what-is-data-science.qmd
@@ -25,7 +25,7 @@ In terms of the role a data scientist serves relative to other occupations, howe
 
 ## We examine the role of data science using data science 
 
-Everyone seems to agree that data science requires skills traditionally associated with a variety of different occupations. [Drew Conway](http://drewconway.com/zia/2013/3/26/the-data-science-venn-diagram), for example, describes data science as a combination of math and statistics, substantive (domain) expertise, and “hacking” skills (see @fig-conway). In dispute is the relative importance of those skills. [Some](https://www.statisticsviews.com/article/nate-silver-what-i-need-from-statisticians/) [have](https://imstat.org/2014/10/01/ims-presidential-address-let-us-own-data-science/) [argued](https://magazine.amstat.org/blog/2013/07/01/datascience/) that data science is basically statistics -- and that twentieth century statisticians like [John Tukey](https://imstat.org/2023/09/30/hand-writing-john-tukey-the-first-data-scientist/) have long possessed the data science skills traditionally associated with computer science and the natural sciences. [Others](http://drewconway.com/zia/2013/3/26/the-data-science-venn-diagram) [have](https://statmodeling.stat.columbia.edu/2013/11/14/statistics-least-important-part-data-science/) [argued](https://web.archive.org/web/20211219192027/http://www.dataists.com/2010/09/a-taxonomy-of-data-science/) that data science is truly interdisciplinary, and statistical thinking only plays a small role. But while opinions on data science abound, few appear to be based on data or science.^[Descriptions of occupations by government agencies are not particularly helpful in differentiating between data science, statistics, and related occupations. For example, according to the Bureau of Labor Statistics, data scientists use “analytical tools and techniques to extract meaningful insights from data.” This description is similar to mathematicians/statisticians, who “analyze data and apply computational techniques to solve problems,” and operations research analysts who use “mathematics and logic to help solve complex issues.”] 
+Everyone seems to agree that data science requires skills traditionally associated with a variety of different occupations. [Drew Conway](http://drewconway.com/zia/2013/3/26/the-data-science-venn-diagram), for example, describes data science as a combination of math and statistics, substantive (domain) expertise, and “hacking” skills (see @fig-conway). In dispute is the relative importance of those skills. [Some](https://www.statisticsviews.com/article/nate-silver-what-i-need-from-statisticians/) [have](https://imstat.org/2014/10/01/ims-presidential-address-let-us-own-data-science/) [argued](https://magazine.amstat.org/blog/2013/07/01/datascience/) that data science is basically statistics -- and that 20th century statisticians like [John Tukey](https://imstat.org/2023/09/30/hand-writing-john-tukey-the-first-data-scientist/) have long possessed the data science skills traditionally associated with computer science and the natural sciences. [Others](http://drewconway.com/zia/2013/3/26/the-data-science-venn-diagram) [have](https://statmodeling.stat.columbia.edu/2013/11/14/statistics-least-important-part-data-science/) [argued](https://web.archive.org/web/20211219192027/http://www.dataists.com/2010/09/a-taxonomy-of-data-science/) that data science is truly interdisciplinary, and statistical thinking only plays a small role. But while opinions on data science abound, few appear to be based on data or science.^[Descriptions of occupations by government agencies are not particularly helpful in differentiating between data science, statistics, and related occupations. For example, according to the Bureau of Labor Statistics, data scientists use “analytical tools and techniques to extract meaningful insights from data.” This description is similar to mathematicians/statisticians, who “analyze data and apply computational techniques to solve problems,” and operations research analysts who use “mathematics and logic to help solve complex issues.”] 
 
 ![[Drew Conway](http://drewconway.com/zia/2013/3/26/the-data-science-venn-diagram) describes data science as a combination of math and statistics, substantive (domain) expertise, and “hacking” skills. Conway's data science venn diagram, reproduced here, is Creative Commons licensed as [Attribution-NonCommercial](https://creativecommons.org/licenses/by-nc/3.0/legalcode).](https://images.squarespace-cdn.com/content/v1/5150aec6e4b0e340ec52710a/1364352051365-HZAS3CLBF7ABLE3F5OBY/Data_Science_VD.png?format=2500w){#fig-conway}
 
