homepage intro updated

--- a/index.qmd
+++ b/index.qmd
@@ -136,8 +136,8 @@ toc: false
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## What is data science? A closer look at science’s latest priority dispute
-Two popular data science algorithms -- naïve Bayes and eigen centrality -- are used to examine the difference between 'data scientists' and 'statisticians,' and to see where each role sits in the network of other occupations.    
+## What is data science?
+Is data science a new and exciting set of skills, necessary for analyzing 21st century data? Or is it (as some have claimed) a rebranding of statistics, which has carefully developed time-honored methods for data analysis over the past century? Two popular data science algorithms -- naïve Bayes and eigen centrality -- are used to examine the difference between data scientists, statisticians, and other occupations.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
 ![](ideas/posts/2024/02/19/images/bubbles.png)
