add refs and link back to section homepage

--- a/ideas/posts/2024/02/19/what-is-data-science.qmd
+++ b/ideas/posts/2024/02/19/what-is-data-science.qmd
@@ -11,6 +11,7 @@ author: Jonathan Auerbach, David Kepplinger, and Nicholas Rios
 date: 02/19/2024
 toc: true
 bibliography: references.bib
+nocite: '@*'
 image: images/bubbles.png
 image-alt: Two bubbles overlapping on a black background.
 ---
@@ -36,7 +37,7 @@ Our main assumption is that the skills required to work in an occupation can be 
 The algorithms we employ consider occupations to be similar if they have many instructional programs in common. Data scientists and statisticians share 14 degrees, suggesting they are similar: Half the programs that prepare students to be a statistician also prepare students to be a data scientist. In contrast, data scientists and computer programmers share six degrees in common, suggesting they are less similar; computer programmers have 17 degrees overall so only a third of the programs that prepare students to be a computer programmer also prepare students to be a data scientist.^[Our analysis treats all instructional programs as equal and independent. We do not consider, for example, the number of workers who hold a degree from an instructional program or whether two instructional programs are similar or offered by similar academic departments. Our analysis could be adjusted to account for this or related information, although it is unclear to the authors whether such an adjustment would make the results more accurate.] 
 
 ::: {.callout-note appearance="simple" collapse="true"}
-Data and code to reproduce the analysis and figures is available through [GitHub](https://github.com/brtarran/what-is-data-science).
+Data and code to reproduce the analysis and figures are available through [GitHub](https://github.com/brtarran/what-is-data-science).
 :::
 
 ## Data science is a shared enterprise among science and math 
@@ -81,8 +82,8 @@ This suggests that while data science may be new and exciting, the role served b
 
 Regardless of whether data science is or is not statistics, the occupation "data scientist" has proven immensely popular, capturing a zeitgeist that has eluded statistics. This is best evidenced by the fact that data science -- and not statistics -- has been crowned the [sexiest](https://hbr.org/2012/10/data-scientist-the-sexiest-job-of-the-21st-century) job of the 21st century. But if statistics has not enjoyed the popularity of data science, perhaps the real question in need of answering is: What is statistics?
 
-::: {.article-btn}
-[Back to section homepage](url)
+::: article-btn
+[Explore more data science ideas](/ideas/index.qmd)
 :::
 
 ::: {.further-info}
