GH url updated, doi added

--- a/ideas/posts/2024/02/19/what-is-data-science.qmd
+++ b/ideas/posts/2024/02/19/what-is-data-science.qmd
@@ -37,7 +37,7 @@ Our main assumption is that the skills required to work in an occupation can be 
 The algorithms we employ consider occupations to be similar if they have many instructional programs in common. Data scientists and statisticians share 14 degrees, suggesting they are similar: Half the programs that prepare students to be a statistician also prepare students to be a data scientist. In contrast, data scientists and computer programmers share six degrees in common, suggesting they are less similar; computer programmers have 17 degrees overall so only a third of the programs that prepare students to be a computer programmer also prepare students to be a data scientist.^[Our analysis treats all instructional programs as equal and independent. We do not consider, for example, the number of workers who hold a degree from an instructional program or whether two instructional programs are similar or offered by similar academic departments. Our analysis could be adjusted to account for this or related information, although it is unclear to the authors whether such an adjustment would make the results more accurate.] 
 
 ::: {.callout-note appearance="simple" collapse="true"}
-Data and code to reproduce the analysis and figures are available through [GitHub](https://github.com/brtarran/what-is-data-science).
+Data and code to reproduce the analysis and figures are available through [GitHub](https://github.com/jauerbach/what-is-data-science).
 :::
 
 ## Data science is a shared enterprise among science and math 
@@ -105,7 +105,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Auerbach, Jonathan, David Kepplinger, and Nicholas Rios. 2023. "What is data science? A closer look at science’s latest priority dispute." Real World Data Science, February 19, 2024. [URL](https://realworlddatascience.net/ideas/posts/2024/02/19/what-is-data-science.html)
+: Auerbach, Jonathan, David Kepplinger, and Nicholas Rios. 2023. "What is data science? A closer look at science’s latest priority dispute." Real World Data Science, February 19, 2024. [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.10679962.svg){style="vertical-align:text-bottom;"}](https://doi.org/10.5281/zenodo.10679962)
 :::
 :::
 :::
