--- a/index.qmd
+++ b/index.qmd
@@ -68,7 +68,7 @@ listing:
     contents: 
     - /viewpoints
     - "!index.qmd"
-    - "!cherry-blossom.qmd"
+    - "!editors-note.qmd"
     - "!gen-ai-framework.qmd"
     - "!llms-whitepaper-response.qmd"
     sort: "date desc"
