--- a/viewpoints/interviews/posts/2024/03/12/democratizing-data.qmd
+++ b/viewpoints/interviews/posts/2024/03/12/democratizing-data.qmd
@@ -1,14 +1,12 @@
 ---
-title: "Democratizing Data interview"
+title: "Democratizing Data: Using natural language processing and machine learning to capture dataset usage"
 description: |
-  Edited highlights from an interview conducted last summer with US Census Bureau director Robert Santos and colleagues, touching on pandemic challenges, the growing use of administrative data, data privacy concerns, data education and literacy, and how large language models might change the way we interact with official statistics.
+  Real World Data Science speaks with Julia Lane, professor at the NYU Wagner Graduate School of Public Service, about an initiative that seeks to improve public understanding of how datasets are used and the value they provide. 
 categories:
-  - Data
-  - Data privacy
-  - Data literacy
-  - Education
-  - Public engagement
   - AI
+  - Data
+  - Machine learning
+  - Natural language processing
 author: Brian Tarran
 date: 03/12/2024
 # image: images/robert-santos.png
@@ -16,22 +14,22 @@ date: 03/12/2024
 toc: false
 ---
 
-How much is spent each year by governments, researchers, and public and private organisations on collecting and publishing data? Globally, hundreds of billions of dollars would seem a reasonable rough estimate^[Bearing in mind that data on government spending on data alone are [“painfully head to obtain,”](https://blogs.worldbank.org/opendata/how-much-should-governments-spend-data) according to the World Bank.] -- so, whatever the exact figure, investment in data likely constitutes a sizeable annual sum. Now, how much value does all this data provide? 
+It's difficult to put a figure on how much is spent each year on collecting and publishing data. According to the World Bank, it is [“painfully hard to obtain”](https://blogs.worldbank.org/opendata/how-much-should-governments-spend-data) information just on government spending on data, never mind other bodies and organisations. But investment in data likely constitutes a sizeable annual sum -- somewhere on the order of hundreds of billions of dollars would seem a reasonable (rough) estimate.
 
-That’s a challenging question to answer as, by and large, there is very little data on dataset usage. There’s no easy way to find all the users of a particular dataset and to see how the data has been used, or what research topics it may have contributed to.
+Now, here's an even more challenging figure to pin down: How much value does all this data provide? By and large, there is very little data -- or systematic collection of data -- on dataset usage. There’s no easy way to find all the users of a particular dataset and to see how the data has been used, or what research topics it may have contributed to.
 
-Writing in the [Harvard Data Science Review in April 2022](https://hdsr.mitpress.mit.edu/pub/g6e8noiy/release/2), Julia Lane and others explained that “the current approach to finding what data sets are used to answer scientific questions … is largely manual and ad hoc.” They went on to argue that, “Better information on the use of data is likely to have at least two results: (i) government agencies might use the information to describe the return on investment in data sets and (ii) scientists might use the information to reduce the time taken to search and discover other empirical research.”
+Writing in the [Harvard Data Science Review in April 2022](https://hdsr.mitpress.mit.edu/pub/g6e8noiy/release/2), [Julia Lane](https://julialane.org/) and others explained that “the current approach to finding what data sets are used to answer scientific questions ... is largely manual and ad hoc.” They went on to argue that, “Better information on the use of data is likely to have at least two results: (i) government agencies might use the information to describe the return on investment in data sets and (ii) scientists might use the information to reduce the time taken to search and discover other empirical research.”
 
 This hope for a better understanding of how datasets are used and the value they provide underpins the creation of “Democratizing Data: A Search and Discovery Platform for Public Data Assets.”
 
-As described on the platform’s homepage, Democratizing Data “describes how datasets identified by federal agencies have been used in scientific research. It uses machine learning algorithms to search over 90 million documents and find how datasets are cited, in what publications, and what topics they are used to study.”
+As described on [the platform’s homepage](https://democratizingdata.ai/), Democratizing Data “describes how datasets identified by federal agencies have been used in scientific research. It uses machine learning algorithms to search over 90 million documents and find how datasets are cited, in what publications, and what topics they are used to study.”
 
-But this is just the start of what Lane thinks the project could eventually achieve, as she describes in this interview.
+But this is just the start of what Lane thinks the project could eventually achieve, as she explains in this interview.
 
-**How did the Democratizing Data platform come about?**
+**How did the Democratizing Data platform come about?**  
 It emerged from three things, really, and I can trace the start of it back to 2016, when I was asked to build a secure environment that could host confidential microdata in order to inform the work of the [Commission on Evidence-Based Policymaking](https://obamawhitehouse.archives.gov/omb/management/commission_evidence).^[The Commission on Evidence-Based Policymaking was “charged with examining all aspects of how to increase the availability and use of government data to build evidence and inform program design, while protecting privacy and confidentiality of those data.”]
 
-It was pretty clear that one of the recommendations that was going to come out of this commission was going to be a national secure data service. So, they asked me to lead on this because I had built the [NORC remote access Data Enclave at the University of Chicago]( https://www.norc.org/services-solutions/data-enclave.html) 10 years before that.
+It was pretty clear that one of the recommendations that was going to come out of this commission was going to be a national secure data service. So, they asked me to lead on this because I had built the [NORC remote access Data Enclave at the University of Chicago](https://www.norc.org/services-solutions/data-enclave.html) 10 years before that.
 
 So, this was the first step towards Democratizing Data.
 
@@ -50,12 +48,15 @@ So, that's how Democratizing Data got started. I thought, really the best way to
 Now, how was I going do that? I could read all the publications and manually write notes about who the authors were, and what the topics were, and what datasets they used. But that's not realistic. So, I thought, well, maybe we could combine natural language processing techniques, with machine learning so that you could “read” all these publications and find out how datasets are cited. 
 
 **Would this have been a problem that needed solving if there were common, established citation standards and practices for datasets?**
+**Would this have been a problem that needed solving if there were common, established citation standards and practices for datasets?**
+
+**Would this have been a problem that needed solving if there were common, established citation standards and practices for datasets?**  
 
 There are great citation practices for datasets, and we’ve had them for 15 years. Back when I was a National Science Foundation program officer, everyone was saying, well, if we just get the plumbing right, people will come and use it. Well, they don’t. Even when there are DOIs available and they're relatively easy to cite, people don't. The plumbing's there, we built it, but they didn't come.
 
 So, I think there has to be a demand-side piece, and we talk about that in one of the papers in an upcoming special issue of the [Harvard Data Science Review](https://hdsr.mitpress.mit.edu/). How do you create an incentive structure so that people do provide information about how they've used data? My thinking was that, suppose we can find out who's using what data. Then the incentive structure to an academic is “your name in lights”: you are the world's living expert in orange carrots with green stripes, or whatever. So, we would read the publications, find the datasets, and then you could have a leaderboard of the people who have done the most work in a particular field, and then people would have an incentive both to cite datasets and to let you know when you miss things. And that was when I thought, well, let's put all this information up in a dashboard.
 
-**So, is the grand vision for this to create a platform that, essentially, any data owner -- anyone who publishes datasets -- could plug into, connect to, and understand how other people are using their datasets?**
+**So, is the grand vision for this to create a platform that, essentially, any data owner -- anyone who publishes datasets -- could plug into, connect to, and understand how other people are using their datasets?**  
 That's right. The grand vision is basically to set up a search and discovery portal. Originally, my thinking was that would be super helpful for people just starting out in a field; for a new graduate student or a postdoc to say, “I want to figure out what work has been done on recidivism of welfare recipients relative to access to jobs and neighborhood characteristics,” for example, and for them to see what datasets are available and how have they been used. 
 
 But from the data producer side it'd also be useful to know: Who’s using the datasets? Where are the gaps? Where are we maybe not reaching as many people as we thought we were, and how can we change that?
@@ -66,19 +67,19 @@ We started a pilot with the US Department of Agriculture’s Economic Research S
 
 So, we have these agencies involved and they've really been the drivers, the intellectual partners, pushing the design and the structure forward.
 
-**I’ve had a chance to play around with some of the [public dashboards you’ve released on Tableau](https://democratizingdata.ai/tools/dashboards/), and I really like the way you can explore dataset usage from different start points and end up with a list of publications that use those datasets. My question is, though, how have you connected all this up – datasets and publications?**
+**I’ve had a chance to play around with some of the [public dashboards you’ve released on Tableau](https://democratizingdata.ai/tools/dashboards/), and I really like the way you can explore dataset usage from different start points and end up with a list of publications that use those datasets. My question is, though, how have you connected all this up – datasets and publications?**  
 Our start point was scientific publications because these are pretty well curated. We ended up working with Elsevier because Scopus [Elsevier’s abstract and citation database] is a well-curated corpus and they've got the associated publication metadata well curated.
 
 So, we have the Scopus corpus, and we then ran [a Kaggle competition](https://www.kaggle.com/c/coleridgeinitiative-show-us-the-data) to develop machine learning models to identify candidate snippets of text from scientific papers that seem like they might be referring to a dataset.
 
 Human researchers would then validate those snippets as either referring to a dataset or not, and once they've validated the publication-to-dataset dyad, we then pull in all the metadata associated with the publication: authors, institutions, key topics, publication year, countries, etc. – all this information gets piped over to the dashboards.
 
-**You published [a Harvard Data Science Review article about this competition a couple of years ago](https://hdsr.mitpress.mit.edu/pub/g6e8noiy/release/2), and from that I understand that you can actually get quite far with a simple string-matching method for finding datasets, but you would still miss a lot of citations using this approach because of the variability in the way people refer to datasets.**
+**You published [a Harvard Data Science Review article about this competition a couple of years ago](https://hdsr.mitpress.mit.edu/pub/g6e8noiy/release/2), and from that I understand that you can actually get quite far with a simple string-matching method for finding datasets, but you would still miss a lot of citations using this approach because of the variability in the way people refer to datasets.**  
 That’s right. There were three different models that that were developed, and each one picks up different aspects of how authors mention data in publications, and all three have been extremely useful. We learned a lot about the variety of ways in which researchers cite the data that they use.
 
 It turns out that more people do cite datasets in references than we had originally thought, but usually they don't cite a DOI, they cite the URL or they cite the exact name of the dataset, so string search of references and URLs pulls out quite a lot of information that the DOIs, *per se*, don't.
 
-**What are the next steps for scaling up the Democratizing Data work?**
+**What are the next steps for scaling up the Democratizing Data work?**  
 I think it is more of a sociotechnical issue than a technical one. We have the plumbing, but really what we need to do to figure out the incentives for researchers. We need to build a community around the data, which is what's happened with code and the sharing of code on platforms like GitHub.
 
 Obviously, our initial focus has been on federal statistical data, but there's also a lot of interest in how administrative data or streaming data are being used. 
@@ -99,13 +100,13 @@ If we don't build a community around the data, we're just going to have really b
 Copyright and licence
 : &copy; 2023 Royal Statistical Society
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Photo of Robert Santos is excluded from this licence; it is a US Government work.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. 
   
 :::
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "'We absolutely have to transform and modernise our operation' -- US Census Bureau director Robert Santos." Real World Data Science, January 15, 2024. [URL](https://realworlddatascience.net/viewpoints/interviews/posts/2024/01/15/census-bureau.html)
+: Tarran, Brian. 2023. "Democratizing Data: Using natural language processing and machine learning to capture dataset usage." Real World Data Science, March 12, 2024. [URL](https://realworlddatascience.net/viewpoints/interviews/posts/2024/03/12/democratizing-data.html)
 :::
 :::
 :::
