--- a/viewpoints/interviews/posts/2024/03/12/democratizing-data.qmd
+++ b/viewpoints/interviews/posts/2024/03/12/democratizing-data.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Democratizing Data: Using natural language processing and machine learning to capture dataset usage"
 description: |
-  Real World Data Science speaks with Julia Lane, professor at the NYU Wagner Graduate School of Public Service, about an initiative that seeks to improve public understanding of how datasets are used and the value they provide. 
+  Real World Data Science speaks with Julia Lane, professor at the NYU Wagner Graduate School of Public Service and visiting fellow at RTI International, about an initiative that seeks to improve public understanding of how datasets are used and the value they provide. 
 categories:
   - AI
   - Data
@@ -27,17 +27,15 @@ As described on [the platform’s homepage](https://democratizingdata.ai/), Demo
 But this is just the start of what Lane thinks the project could eventually achieve, as she explains in this interview.
 
 **How did the Democratizing Data platform come about?**  
-It emerged from three things, really, and I can trace the start of it back to 2016, when I was asked to build a secure environment that could host confidential microdata in order to inform the work of the [Commission on Evidence-Based Policymaking](https://obamawhitehouse.archives.gov/omb/management/commission_evidence).^[The Commission on Evidence-Based Policymaking was “charged with examining all aspects of how to increase the availability and use of government data to build evidence and inform program design, while protecting privacy and confidentiality of those data.”]
+It emerged from three things, really, and I can trace the start of it back to 2016, when I was asked to build a secure environment that could host confidential microdata in order to inform the work of the [Commission on Evidence-Based Policymaking](https://obamawhitehouse.archives.gov/omb/management/commission_evidence).^[The Commission on Evidence-Based Policymaking was “charged with examining all aspects of how to increase the availability and use of government data to build evidence and inform program design, while protecting privacy and confidentiality of those data.”] They asked me to lead on this because I had built the [NORC remote access Data Enclave at the University of Chicago](https://www.norc.org/services-solutions/data-enclave.html) 10 years before that.
 
-It was pretty clear that one of the recommendations that was going to come out of this commission was going to be a national secure data service. So, they asked me to lead on this because I had built the [NORC remote access Data Enclave at the University of Chicago](https://www.norc.org/services-solutions/data-enclave.html) 10 years before that.
-
-So, this was the first step towards Democratizing Data.
+This was the first step towards Democratizing Data.
 
 The second step was figuring out how to create value from the data in the secure environment, because we knew that if we couldn’t create value, government agencies weren't going to put their data into it.
 
 But how do you figure out what agencies are going to want to do with the data in a secure environment? It's difficult to get them to tell you what they want, so I thought, well, why don't we build training classes, put people in these training classes and have them work on problems with their own data? That way, we’re going to know what problems they have so that we can address them.
 
-So, step 1 was build secure environment. Step 2 was build capacity and identify the questions that are of interest to agencies so that they would put data into the secure environment.
+So, step 1 was build secure environment. Step 2 was build capacity and identify the questions that are of interest to agencies so that they would put data into the secure environment. That led to the training classes that Frauke Kreuter, Rayid Ghani, and I put together, which are described here.
 
 But then what happened was, people kept coming to me in the classes and asking, “Who else has worked with these data, and who can I go to and ask questions?”
 
@@ -47,11 +45,7 @@ So, that's how Democratizing Data got started. I thought, really the best way to
 
 Now, how was I going do that? I could read all the publications and manually write notes about who the authors were, and what the topics were, and what datasets they used. But that's not realistic. So, I thought, well, maybe we could combine natural language processing techniques, with machine learning so that you could “read” all these publications and find out how datasets are cited. 
 
-**Would this have been a problem that needed solving if there were common, established citation standards and practices for datasets?**
-**Would this have been a problem that needed solving if there were common, established citation standards and practices for datasets?**
-
 **Would this have been a problem that needed solving if there were common, established citation standards and practices for datasets?**  
-
 There are great citation practices for datasets, and we’ve had them for 15 years. Back when I was a National Science Foundation program officer, everyone was saying, well, if we just get the plumbing right, people will come and use it. Well, they don’t. Even when there are DOIs available and they're relatively easy to cite, people don't. The plumbing's there, we built it, but they didn't come.
 
 So, I think there has to be a demand-side piece, and we talk about that in one of the papers in an upcoming special issue of the [Harvard Data Science Review](https://hdsr.mitpress.mit.edu/). How do you create an incentive structure so that people do provide information about how they've used data? My thinking was that, suppose we can find out who's using what data. Then the incentive structure to an academic is “your name in lights”: you are the world's living expert in orange carrots with green stripes, or whatever. So, we would read the publications, find the datasets, and then you could have a leaderboard of the people who have done the most work in a particular field, and then people would have an incentive both to cite datasets and to let you know when you miss things. And that was when I thought, well, let's put all this information up in a dashboard.
@@ -63,7 +57,7 @@ But from the data producer side it'd also be useful to know: Who’s using the d
 
 So, while the original idea was to build a platform for researchers, plans changed when the [Evidence Act](https://www.govinfo.gov/content/pkg/PLAW-115publ435/pdf/PLAW-115publ435.pdf) passed, and agencies were required to produce usage statistics for their datasets.^[Specifically, the act requires Federal Agencies to identify and implement methods “for collecting and analyzing digital information on data asset usage by users within and outside of the agency.”]
 
-We started a pilot with the US Department of Agriculture’s Economic Research Service (ERS), and they have been a huge supporter and helped us work through a lot of the issues. Then, when we began showing around the ERS wireframes and ideas, the NSF National Center for Science and Engineering Statistics joined in, and so did USDA's National Agricultural Statistics Service and the National Center for Education Statistics and the National Oceanic and Atmospheric Administration.
+We started a pilot with the US Department of Agriculture’s Economic Research Service (ERS). They have been a huge supporter and helped us work through a lot of the issues. Then, when we began showing around the ERS wireframes and ideas, the NSF National Center for Science and Engineering Statistics joined in, and so did USDA's National Agricultural Statistics Service and the National Center for Education Statistics and the National Oceanic and Atmospheric Administration.
 
 So, we have these agencies involved and they've really been the drivers, the intellectual partners, pushing the design and the structure forward.
 
