Photo and pullquote added

--- a/viewpoints/interviews/posts/2024/03/12/democratizing-data.qmd
+++ b/viewpoints/interviews/posts/2024/03/12/democratizing-data.qmd
@@ -9,8 +9,8 @@ categories:
   - Natural language processing
 author: Brian Tarran
 date: 03/12/2024
-# image: images/robert-santos.png
-# image-alt: Official photograph of US Census Bureau director Robert Santos, with US flag in background.
+image: images/julia-lane-thumb.png
+image-alt: Photo of Julia Lane, professor at the NYU Wagner Graduate School of Public Service and visiting fellow at RTI International.
 toc: false
 ---
 
@@ -43,7 +43,20 @@ I could give them a list of people, but that list would be biased by my age and 
 
 So, that's how Democratizing Data got started. I thought, really the best way to give a full answer to those sorts of questions is to figure out what datasets are being used in research publications. 
 
-Now, how was I going do that? I could read all the publications and manually write notes about who the authors were, and what the topics were, and what datasets they used. But that's not realistic. So, I thought, well, maybe we could combine natural language processing techniques, with machine learning so that you could “read” all these publications and find out how datasets are cited. 
+Now, how was I going do that? I could read all the publications and manually write notes about who the authors were, and what the topics were, and what datasets they used. But that's not realistic. So, I thought, well, maybe we could combine natural language processing techniques, with machine learning so that you could “read” all these publications and find out how datasets are cited.
+
+::: {.pullquote-container}
+::: grid
+::: {.g-col-12 .g-col-lg-4}
+![Julia Lane, professor at the NYU Wagner Graduate School of Public Service and visiting fellow at RTI International. Image supplied, used with permission.](images/julia-lane-sq.png){fig-alt="Photo of Julia Lane, professor at the NYU Wagner Graduate School of Public Service and visiting fellow at RTI International." fig-align="left"}
+::: 
+::: {.g-col-12 .g-col-lg-8 .pullquote-grid .pullquote}
+![](/images/pullquote-purple.png){width="50px"}
+
+At the moment, it feels a little bit like the Wild West. We're searching for ways to measure how datasets are used, how they're valued, and so on. Federal statistical data and Elsevier's Scopus have been a great starting point for us, but the broader vision is to incorporate other datasets and other publication databases like arXiv and Semantic Scholar.
+:::
+:::
+:::
 
 **Would this have been a problem that needed solving if there were common, established citation standards and practices for datasets?**  
 There are great citation practices for datasets, and we’ve had them for 15 years. Back when I was a National Science Foundation program officer, everyone was saying, well, if we just get the plumbing right, people will come and use it. Well, they don’t. Even when there are DOIs available and they're relatively easy to cite, people don't. The plumbing's there, we built it, but they didn't come.
@@ -94,7 +107,7 @@ If we don't build a community around the data, we're just going to have really b
 Copyright and licence
 : &copy; 2023 Royal Statistical Society
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. 
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Photo of Julia Lane is not included in this licence. 
   
 :::
 
